--- a/ProductCatalog-Web/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                             @if (User.IsInRole("CustomerRelations"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin">Customer Relations Panel</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="CustomerRelations">Customer Relations Panel</a>
                                 </li>
                             }
 
