--- a/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
@@ -52,11 +52,11 @@
         <a asp-controller="Home" asp-action="GetCustomers" class="text-white text-decoration-none">
             <div class="card bg-primary mb-4 shadow-lg">
                 <div class="card-header text-center">
-                    <h5 class="card-title"><i class="fas fa-users"></i> Customers</h5>
+                    <h5 class="card-title"><i class="fas fa-users"></i> Users</h5>
                 </div>
                 <div class="card-body text-center">
                     <h3><b>@ViewBag.UserCount</b></h3>
-                    <p>Total Blogs</p>
+                    <p>Total Users</p>
                 </div>
             </div>
         </a>
