--- a/ProductCatalog-Web/Areas/CustomerRelations/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Areas/CustomerRelations/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                                 <a class="nav-link" href="#"><i class="fa-solid fa-bell"></i> Notifications</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="CustomerRelations" asp-controller="Dashboard" asp-action="Settings">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="MyAccount">
                                     <i class="fa-solid fa-cog"></i> Settings
                                 </a>
                             </li>
