--- a/ProductCatalog-Web/Areas/CustomerRelations/Views/Questions/Create.cshtml
+++ b/ProductCatalog-Web/Areas/CustomerRelations/Views/Questions/Create.cshtml
@@ -44,6 +44,13 @@
                             <span asp-validation-for="Status" class="text-danger"></span>
                         </div>
 
+                        <div class="form-group mb-3">
+                            <label asp-for="QuestionStatus" class="form-label fw-bold"><i class="fas fa-toggle-on"></i> Question Status</label>
+                            <select asp-for="QuestionStatus" class="form-select border-primary shadow-sm" asp-items="Html.GetEnumSelectList<ProductCatolog_Core.Enums.QuestionStatus>()">
+                            </select>
+                            <span asp-validation-for="QuestionStatus" class="text-danger"></span>
+                        </div>
+
                         <div class="d-flex justify-content-between mt-4">
                             <a asp-action="Index" class="btn btn-outline-secondary px-4">Back to List</a>
                             <button type="submit" class="btn btn-primary px-4">Create</button>
