--- a/ProductCatalog-Web/Areas/Admin/Views/Order/Detail.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Order/Detail.cshtml
@@ -35,7 +35,7 @@
                                 case OrderStatus.OrderCancelled:
                                     <span class="badge bg-danger">Order Cancelled</span>
                                     break;
-                                case OrderStatus.Proccessing:
+                                case OrderStatus.Processing:
                                     <span class="badge bg-warning text-dark">Processing</span>
                                     break;
                                 case OrderStatus.Shipped:
