--- a/ProductCatalog-Web/Views/Order/MyOrders.cshtml
+++ b/ProductCatalog-Web/Views/Order/MyOrders.cshtml
@@ -41,7 +41,7 @@
                                 case OrderStatus.OrderCancelled:
                                     <span class="badge bg-danger p-2">Cancelled</span>
                                     break;
-                                case OrderStatus.Proccessing:
+                                case OrderStatus.Processing:
                                     <span class="badge bg-warning text-dark p-2">Processing</span>
                                     break;
                                 case OrderStatus.Shipped:
