--- a/ProductCatalog-Web/Areas/Admin/Views/Order/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Order/Index.cshtml
@@ -38,7 +38,7 @@
                         case OrderStatus.OrderCancelled:
                             <span class="badge bg-danger">Cancelled</span>
                             break;
-                        case OrderStatus.Proccessing:
+                        case OrderStatus.Processing:
                             <span class="badge bg-warning text-dark">Processing</span>
                             break;
                         case OrderStatus.Shipped:
