--- a/ProductCatalog-Web/Views/Order/Completed.cshtml
+++ b/ProductCatalog-Web/Views/Order/Completed.cshtml
@@ -29,6 +29,9 @@
                     <dt class="col-sm-4">Order No:</dt>
                     <dd class="col-sm-8 fw-bold">@Model.Id</dd>
 
+                    <dt class="col-sm-4">Order Number:</dt>
+                    <dd class="col-sm-8 fw-bold">@Model.OrderNumber</dd>
+
                     <dt class="col-sm-4">Customer Name:</dt>
                     <dd class="col-sm-8">@Model.Name</dd>
 
@@ -48,7 +51,7 @@
                             case OrderStatus.OrderCancelled:
                                 <span class="badge bg-danger p-2">Cancelled</span>
                                 break;
-                            case OrderStatus.Proccessing:
+                            case OrderStatus.Processing:
                                 <span class="badge bg-warning text-dark p-2">Processing</span>
                                 break;
                             case OrderStatus.Shipped:
@@ -115,7 +118,7 @@
         </div>
 
         <div class="d-flex justify-content-between mt-4">
-            <a asp-action="Index" class="btn btn-outline-secondary">
+            <a asp-action="Index" asp-controller="Home" class="btn btn-outline-secondary">
                 <i class="bi bi-arrow-left"></i> Back to Shop
             </a>
             <a asp-action="MyOrders" class="btn btn-primary">
