--- a/ProductCatalog-Web/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Views/Shared/_Layout.cshtml
@@ -14,33 +14,50 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <i class="bi bi-house-door"></i> Home
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                        aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">
+                                <i class="bi bi-newspaper"></i> Articles
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">
+                                <i class="bi bi-box-seam"></i> Products
+                            </a>
                         </li>
                     </ul>
+
                     <div class="navbar-nav d-flex align-items-center">
+                        <li class="nav-item">
+                            <a class="btn btn-outline-warning ms-3" asp-area="" asp-controller="Order" asp-action="ShippingStatus">
+                                <i class="bi bi-truck"></i> Order Status
+                            </a>
+                        </li>
+
                         @if (User.Identity.IsAuthenticated)
                         {
                             @if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin">Admin Panel</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin">
+                                        <i class="bi bi-shield-lock"></i> Admin Panel
+                                    </a>
                                 </li>
                             }
                             @if (User.IsInRole("CustomerRelations"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="CustomerRelations">Customer Relations Panel</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="CustomerRelations">
+                                        <i class="bi bi-people"></i> Customer Relations
+                                    </a>
                                 </li>
                             }
 
@@ -50,29 +67,44 @@
                                 </a>
                             </li>
 
-
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-dark" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="bi bi-person"></i> @User.Identity.Name
+                                    <i class="bi bi-person-circle"></i> @User.Identity.Name
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="MyAccount">My User Information</a></li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="MyAccount">
+                                            <i class="bi bi-person-badge"></i> My User Information
+                                        </a>
+                                    </li>
                                     @if (!User.IsInRole("Admin"))
                                     {
-                                        <li><a class="dropdown-item" asp-area="" asp-controller="Order" asp-action="MyOrders">My Orders</a></li>
+                                        <li>
+                                            <a class="dropdown-item" asp-area="" asp-controller="Order" asp-action="MyOrders">
+                                                <i class="bi bi-list-check"></i> My Orders
+                                            </a>
+                                        </li>
                                     }
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item text-danger" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                                    <li>
+                                        <a class="dropdown-item text-danger" asp-area="" asp-controller="Account" asp-action="Logout">
+                                            <i class="bi bi-box-arrow-right"></i> Logout
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">
+                                    <i class="bi bi-person-plus"></i> Register
+                                </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">
+                                    <i class="bi bi-box-arrow-in-right"></i> Login
+                                </a>
                             </li>
                         }
 
@@ -86,11 +118,15 @@
                     <form method="get" asp-controller="Product" asp-action="Index" class="d-flex" role="search">
                         <input type="hidden" name="CatId" value="@Context.Request.Query["CatId"]" />
                         <input name="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-primary" type="submit">Search</button>
+                        <button class="btn btn-outline-primary" type="submit">
+                            <i class="bi bi-search"></i> Search
+                        </button>
                     </form>
                 </div>
             </div>
         </nav>
+
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
