--- a/ProductCatalog-Web/Areas/Admin/Views/Product/Edit.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Product/Edit.cshtml
@@ -64,6 +64,7 @@
                             <select asp-for="Status" class="form-control">
                                 <option value="Active">Active</option>
                                 <option value="Passive">Passive</option>
+                                <option value="Featured">Freatured</option>
                             </select>
                             <span asp-validation-for="Status" class="text-danger"></span>
                         </div>
