--- a/ProductCatalog-Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -40,6 +40,11 @@
                     </a>
                 </li>
                 <li>
+                     <a asp-area="Admin" asp-controller="Offers" asp-action="Index">
+                       <i class="fa-solid fa-dollar-sign"></i> Offers
+                     </a>
+                </li>
+                <li>
                     <a asp-area="Admin" asp-controller="Settings" asp-action="Index">
                         <i class="fa-solid fa-gears"></i> Settings
                     </a>
