--- a/ProductCatalog-Web/Areas/Admin/Views/Product/Create.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Product/Create.cshtml
@@ -55,6 +55,18 @@
                             </select>
                         </div>
 
+                        <div class="form-group mb-3">
+                            <label asp-for="Status" class="form-label fw-bold">
+                                <i class="fas fa-toggle-on"></i> Status
+                            </label>
+                            <select asp-for="Status" class="form-control">
+                                <option value="Active">Active</option>
+                                <option value="Passive">Passive</option>
+                                <option value="Featured">Freatured</option>
+                            </select>
+                            <span asp-validation-for="Status" class="text-danger"></span>
+                        </div>
+
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-success btn-lg">
                                 <i class="fas fa-save"></i> Create
