--- a/ProductCatalog-Web/Areas/ContentManager/Views/Articles/Index.cshtml
+++ b/ProductCatalog-Web/Areas/ContentManager/Views/Articles/Index.cshtml
@@ -5,93 +5,58 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="text-center my-4">Article List</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Introduction)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Development)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Conclusion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageUrl1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageUrl2)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageUrl3)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
+<div class="container">
+    <div class="row">
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td style="white-space: normal; word-break: break-word; max-width: 100%;">
-                    <div style="max-width: 1500000px; max-height: 300px; overflow: auto; padding: 10px; border: 1px solid #ccc;">
-                        @Html.Raw(item.Introduction)
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card shadow-sm h-100">
+                    <div id="carousel-@item.Id" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            @if (!string.IsNullOrEmpty(item.ImageUrl1))
+                            {
+                                <div class="carousel-item active">
+                                    <img src="~/img/@item.ImageUrl1" class="d-block w-100" alt="Image1">
+                                </div>
+                            }
+                            @if (!string.IsNullOrEmpty(item.ImageUrl2))
+                            {
+                                <div class="carousel-item">
+                                    <img src="~/img/@item.ImageUrl2" class="d-block w-100" alt="Image2">
+                                </div>
+                            }
+                            @if (!string.IsNullOrEmpty(item.ImageUrl3))
+                            {
+                                <div class="carousel-item">
+                                    <img src="~/img/@item.ImageUrl3" class="d-block w-100" alt="Image3">
+                                </div>
+                            }
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel-@item.Id" role="button" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel-@item.Id" role="button" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        </a>
                     </div>
-                </td>
-                <td style="white-space: normal; word-break: break-word; max-width: 100%;">
-                    <div style="max-width: 1500000px; max-height: 300px; overflow: auto; padding: 10px; border: 1px solid #ccc;">
-                        @Html.Raw(item.Development)
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Name</h5>
+                        <p class="card-text text-truncate">@Html.Raw(item.Introduction)</p>
+                        <p class="card-text text-muted">@Html.DisplayFor(modelItem => item.CreatedDate)</p>
+                        <p class="badge bg-info">@Html.DisplayFor(modelItem => item.Status)</p>
+                        <div class="mt-3 d-flex justify-content-between">
+                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Edit</a>
+                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</a>
+                        </div>
                     </div>
-                </td>
-                <td style="white-space: normal; word-break: break-word; max-width: 100%;">
-                    <div style="max-width: 1500000px; max-height: 300px; overflow: auto; padding: 10px; border: 1px solid #ccc;">
-                        @Html.Raw(item.Conclusion)
-                    </div>
-                </td>
-                <td>
-                    <img src="~/img/@item.ImageUrl1" alt="Image1" class="img-fluid" />
-                </td>
-                <td>
-                    <img src="~/img/@item.ImageUrl2" alt="Image1" class="img-fluid" />
-                </td>
-                <td>
-                    <img src="~/img/@item.ImageUrl3" alt="Image1" class="img-fluid" />
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
+                </div>
+            </div>
         }
-    </tbody>
-</table>
+    </div>
+</div>
